# jax-mini-benchmark

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark-jax.ipynb  benchmark-jax.sh  benchmark_jax.py  environment.yml  pyproject.toml  requirements.txt  visualize-benchmark.ipynb
.github/workflows/: ci.yml
benchmarks/: dot_product.py
src/jax_benchmark/: __init__.py  dot_product.py  io.py
