[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[toml]>=6.2",
    "setuptools>=45",
]

[project]
authors = [
    {name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML",
    "importlib-metadata; python_version<'3.8.0'",
    "jax",
    "jaxlib",
    "matplotlib",
    "py-cpuinfo",
    "tqdm",
]
description = "Set of commands for benchmarking JAX on your machine"
dynamic = ["version"]
keywords = [
    "HEP",
    "PWA",
    "amplitude analysis",
    "partial wave analysis",
    "particle physics",
    "physics",
    "tensorflow",
]
license = {file = "LICENSE"}
maintainers = [
    {name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"},
]
name = "jax-mini-benchmark"
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["jax-mini-benchmark[sty]"]
sty = [
    "black",
    "pre-commit",
    "ruff",
]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.scripts]
benchmark-jax = "jax_benchmark:main"
benchmark-jax-dot-product = "jax_benchmark.dot_product:main"

[project.urls]
Documentation = "https://github.com/ComPWA/jax-mini-benchmark"
Source = "https://github.com/ComPWA/jax-mini-benchmark"
Tracker = "https://github.com/ComPWA/jax-mini-benchmark/issues"

[tool.setuptools.package-data]
jax_benchmark = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/jax_benchmark/_version.py"

[tool.black]
exclude = '''
/(
    .*\.egg-info
    | .*build
    | \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | \.venv
    | \.vscode
    | dist
)/
'''
include = '\.pyi?$'
preview = true
target-version = [
    "py310",
    "py311",
    "py37",
    "py38",
    "py39",
]

[tool.pyright]
exclude = [
    "**/*.egg-info",
    "**/.git",
    "**/.ipynb_checkpoints",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.tox",
    "**/__pycache__",
    "**/_build",
    ".ruff_cache/**",
]
reportGeneralTypeIssues = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
typeCheckingMode = "strict"

[tool.ruff]
extend-select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "EM",
    "ERA",
    "FA",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "PL",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
show-fixes = true
src = ["src"]
target-version = "py37"
task-tags = ["cspell"]

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
sort_table_keys = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
